gitflow erroring?